tests/snapshots/notelist_all__notelist_rests_all_durations.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 7
Beam: 2
BeginPage: 1
EndPage: 1
LedgerLine: 2
MusicChar: 43
NoteStem: 11
SetMusicSize: 2
SetWidths: 1
Staff: 2
TextString: 1
TOTAL: 73

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00
y=247.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=156.1 top=72.0 bottom=96.0
x=229.3 top=72.0 bottom=96.0
x=360.4 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0
x=242.7 top=247.0 bottom=271.0
x=411.3 top=247.0 bottom=271.0
x=558.0 top=247.0 bottom=271.0

=== BEAMS ===
x=[457.4..481.1] y=[244.0..245.0] slope=0.042 thick=3.00
x=[504.7..528.4] y=[250.0..251.0] slope=0.042 thick=3.00

=== STEMS: 11 total ===

=== GLYPHS ===
Smufl(57424): 2
Smufl(57476): 2
Smufl(57508): 11
Smufl(58595): 1
Smufl(58596): 2
Smufl(58597): 5
Smufl(58598): 8
Smufl(58599): 4
Smufl(58600): 8
