tests/snapshots/notelist_all__notelist_time_sig_changes.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 5
Beam: 3
BeginPage: 1
EndPage: 1
MusicChar: 32
NoteStem: 20
SetMusicSize: 2
SetWidths: 1
Staff: 2
TextString: 1
TOTAL: 68

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00
y=247.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=238.4 top=72.0 bottom=96.0
x=337.8 top=72.0 bottom=96.0
x=493.2 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0
x=558.0 top=247.0 bottom=271.0

=== BEAMS ===
x=[361.2..384.9] y=[65.0..64.0] slope=-0.042 thick=3.00
x=[401.8..425.5] y=[102.0..101.0] slope=-0.042 thick=3.00
x=[449.2..472.8] y=[96.0..95.0] slope=-0.042 thick=3.00

=== STEMS: 20 total ===

=== GLYPHS ===
Smufl(57424): 2
Smufl(57474): 1
Smufl(57475): 1
Smufl(57476): 5
Smufl(57477): 1
Smufl(57478): 1
Smufl(57480): 1
Smufl(57508): 20
