tests/snapshots/notelist_all__notelist_tuplet_quintuplet.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 2
Beam: 1
BeginPage: 1
EndPage: 1
LedgerLine: 1
Line: 8
MusicChar: 17
NoteStem: 12
SetMusicSize: 1
SetWidths: 1
Staff: 1
TextString: 1
TOTAL: 47

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=409.6 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0

=== BEAMS ===
x=[131.9..246.2] y=[65.1..61.1] slope=-0.035 thick=3.00

=== STEMS: 12 total ===

=== GLYPHS ===
Smufl(57424): 1
Smufl(57476): 2
Smufl(57507): 1
Smufl(57508): 11
Smufl(59523): 1
Smufl(59525): 1
