tests/snapshots/notelist_all__notelist_tuplet_triplet.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 2
Beam: 1
BeginPage: 1
EndPage: 1
LedgerLine: 6
Line: 4
MusicChar: 8
NoteStem: 4
SetMusicSize: 1
SetWidths: 1
Staff: 1
TOTAL: 30

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=371.4 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0

=== BEAMS ===
x=[130.0..299.6] y=[84.0..84.0] slope=0.000 thick=3.00

=== STEMS: 4 total ===

=== GLYPHS ===
Smufl(57426): 1
Smufl(57476): 2
Smufl(57508): 4
Smufl(59523): 1
